[package]
name = "tun-async"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-core", "dep:mio"]

[dependencies]
fehler = "1.0"
mio = { version = "0.8", optional = true }
tun = { path = "../tun" }
tokio = { version = "1.27", optional = true }
tokio-core = { version = "0.1", optional = true }
